--- a/res/layout/activity_view_detail.xml
+++ b/res/layout/activity_view_detail.xml
@@ -3,6 +3,6 @@
     android:id="@+id/view_detail_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.way.ViewDetailActivity"
+    tools:context="cn.way.wandroid.ViewDetailActivity"
     tools:ignore="MergeRootFrame" />
 
