--- a/res/layout/fragment_view_detail.xml
+++ b/res/layout/fragment_view_detail.xml
@@ -6,5 +6,5 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:textIsSelectable="true"
-    tools:context="cn.way.ViewDetailFragment" />
+    tools:context="cn.way.wandroid.ViewDetailFragment" />
 
