--- a/res/layout/activity_bulletin.xml
+++ b/res/layout/activity_bulletin.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" 
+    android:background="#f55">
 
     <fragment android:id="@+id/bulletin"
         android:name="cn.way.wandroid.views.BulletinBoardFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="match_parent" android:layout_height="30dp"/>
 
-</FrameLayout>
+</LinearLayout>
