--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -17,10 +17,8 @@
 
 <resources>
 
-    <string name="clear_cache_menu">Clear Caches</string>
-    <string name="clear_cache_complete_toast">Caches have been cleared</string>
-    <string name="imageview_description">Image Thumbnail</string>
-    <string name="no_network_connection_toast">No network connection found</string>
+    <dimen name="image_thumbnail_size">100dp</dimen>
+    <dimen name="image_thumbnail_spacing">1dp</dimen>
 
-    <string name="tag_click">CLICK TO REFRESH</string>
+    <dimen name="list_image_thumbnail_size">80dp</dimen>
 </resources>
