--- a/res/layout/image_detail_pager.xml
+++ b/res/layout/image_detail_pager.xml
@@ -15,12 +15,9 @@
   limitations under the License.
 -->
 
-<resources>
+<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pager"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
-    <string name="clear_cache_menu">Clear Caches</string>
-    <string name="clear_cache_complete_toast">Caches have been cleared</string>
-    <string name="imageview_description">Image Thumbnail</string>
-    <string name="no_network_connection_toast">No network connection found</string>
-
-    <string name="tag_click">CLICK TO REFRESH</string>
-</resources>
+</android.support.v4.view.ViewPager>
