--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -14,13 +14,12 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-<resources>
+    <item
+        android:id="@+id/clear_cache"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:showAsAction="never"
+        android:title="@string/clear_cache_menu"/>
 
-    <string name="clear_cache_menu">Clear Caches</string>
-    <string name="clear_cache_complete_toast">Caches have been cleared</string>
-    <string name="imageview_description">Image Thumbnail</string>
-    <string name="no_network_connection_toast">No network connection found</string>
-
-    <string name="tag_click">CLICK TO REFRESH</string>
-</resources>
+</menu>
