--- a/res/layout/activity_pull_refresh_usage.xml
+++ b/res/layout/activity_pull_refresh_usage.xml
@@ -7,12 +7,16 @@
 	    android:layout_height="60dp"
 	    android:text="@string/tag_click"
 	    android:onClick="refreshAction"/>
-    <com.handmark.pulltorefresh.library.PullToRefreshListView
+    <com.handmark.pulltorefresh.library.PullToRefreshGridView
         xmlns:ptr="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/pull_to_refresh_listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        ptr:ptrAnimationStyle="flip"
+        android:id="@+id/pull_refresh_grid"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:numColumns="4"
+        android:verticalSpacing="1dp"
+        android:horizontalSpacing="0dp"
+        android:stretchMode="columnWidth"
+        android:gravity="fill"
         ptr:ptrMode="both"
         ptr:ptrDrawable="@drawable/ic_launcher"/>
 </LinearLayout>
