--- a/res/layout/list_item_app.xml
+++ b/res/layout/list_item_app.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#99f">
     <cn.way.wandroid.imageloader.RecyclingImageView
         android:id="@+id/profile"
         android:layout_width="@dimen/list_image_thumbnail_size"
