--- a/res/layout/activity_views.xml
+++ b/res/layout/activity_views.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/cn.way.wandroid"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f55"
@@ -8,7 +9,14 @@
     <cn.way.wandroid.views.WSteper
         android:id="@+id/wSteper1"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp" >
     </cn.way.wandroid.views.WSteper>
+
+    <cn.way.wandroid.views.PageIndicator
+        android:id="@+id/pageIndicator"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#fc0"
+        android:orientation="horizontal" />
 
 </LinearLayout>
