--- a/res/layout/activity_animation_usage.xml
+++ b/res/layout/activity_animation_usage.xml
@@ -4,43 +4,14 @@
     android:layout_height="match_parent"
     android:background="#f55" >
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher" />
+   
+<!--     <cn.way.wandroid.animation.nineold.FlakeView  -->
+<!--         android:layout_width="match_parent" -->
+<!--         android:layout_height="match_parent"/> -->
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginRight="100dp" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher" 
-        android:layout_gravity="center_horizontal"/>
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher" 
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="100dp"/>
-
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher" 
-        android:layout_gravity="right"/>
-    <cn.way.wandroid.animation.nineold.FlakeView 
+    <cn.way.wandroid.animation.DropAnimatorView 
+        android:id="@+id/dropAnimatorView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
+    
 </FrameLayout>
