--- a/res/layout/activity_view_pager.xml
+++ b/res/layout/activity_view_pager.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="#f55">
 
-    <android.support.v4.view.ViewPager
+    <cn.way.wandroid.views.WViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
