--- a/res/layout/activity_graphics_usage.xml
+++ b/res/layout/activity_graphics_usage.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#f55">
-
-    <cn.way.wandroid.graphics.AnnularProgressView
-        android:id="@+id/progressView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_gravity="center">
+    android:layout_height="match_parent">
+	<ImageView 
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:src="@drawable/ic_launcher"
+	    android:contentDescription="@string/app_name"/>
+<!--     <cn.way.wandroid.graphics.AnnularProgressView -->
+<!--         android:id="@+id/progressView" -->
+<!--         android:layout_width="300dp" -->
+<!--         android:layout_height="300dp" -->
+<!--         android:layout_gravity="center"/> -->
         
-    </cn.way.wandroid.graphics.AnnularProgressView>
+    <cn.way.wandroid.graphics.RoundtableView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
