--- a/res/layout/activity_view_list.xml
+++ b/res/layout/activity_view_list.xml
@@ -1,9 +1,10 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/view_list"
-    android:name="cn.way.wandroid.ViewListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.way.ViewListActivity"
-    tools:layout="@android:layout/list_content" />
-
+    >
+    <ListView android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+</LinearLayout>
