--- a/res/layout/activity_animation_usage.xml
+++ b/res/layout/activity_animation_usage.xml
@@ -2,16 +2,36 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f55" >
+    android:background="#f55" 
+    android:clipChildren="false">
 
-   
+    <FrameLayout 
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:clipChildren="false"
+        android:layout_gravity="center">
+        
+    
+   	<TextView android:id="@+id/v1"
+   	    android:layout_width="match_parent"
+   	    android:layout_height="match_parent"
+   	    android:text="this is the first view"
+   	    android:gravity="center"
+   	    android:background="#F00"/>
+   	<TextView android:id="@+id/v2"
+   	    android:layout_width="match_parent"
+   	    android:layout_height="match_parent"
+   	    android:text="what can i do"
+   	    android:gravity="center"
+   	    android:background="#0F0"/>
+   	</FrameLayout>
 <!--     <cn.way.wandroid.animation.nineold.FlakeView  -->
 <!--         android:layout_width="match_parent" -->
 <!--         android:layout_height="match_parent"/> -->
 
-    <cn.way.wandroid.animation.DropAnimatorView 
-        android:id="@+id/dropAnimatorView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+<!--     <cn.way.wandroid.animation.DropAnimatorView  -->
+<!--         android:id="@+id/dropAnimatorView" -->
+<!--         android:layout_width="match_parent" -->
+<!--         android:layout_height="match_parent"/> -->
     
 </FrameLayout>
