--- a/res/layout/bluetooth_page_home.xml
+++ b/res/layout/bluetooth_page_home.xml
@@ -7,4 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="add friends"/>
+    <FrameLayout android:id="@+id/im_fragment_friends"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"></FrameLayout>
 </LinearLayout>
