--- a/res/layout/bluetooth_im_page_discoveries.xml
+++ b/res/layout/bluetooth_im_page_discoveries.xml
@@ -5,16 +5,16 @@
     android:orientation="vertical" >
     <LinearLayout 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:background="#888">
         <Button android:id="@+id/backBtn" 
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:text="back"/>
         <Button android:id="@+id/searchBtn" 
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="查找"/>
+            android:layout_width="160dp"
+            android:layout_height="match_parent"
+            android:text="   查找    "/>
     </LinearLayout>
     <ListView android:id="@+id/im_discoveries_list"
         android:layout_width="match_parent"
