--- a/res/layout/account_usage_page.xml
+++ b/res/layout/account_usage_page.xml
@@ -5,11 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
-    <Button android:id="@+id/activityAdapterBtn"
-        android:layout_height="wrap_content"
+    <fragment android:id="@+id/accountUsagePiece"
+        class="cn.way.wandroid.account.usage.AccountUsagePiece"
         android:layout_width="match_parent"
-        android:text="FragmentsActivity"/>
-    <ListView android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"/>
 </LinearLayout>
