--- a/res/layout/activity_view_twopane.xml
+++ b/res/layout/activity_view_twopane.xml
@@ -7,7 +7,7 @@
     android:baselineAligned="false"
     android:orientation="horizontal"
     android:showDividers="middle"
-    tools:context="cn.way.wandroid.UasgeListActivity" >
+    tools:context="cn.way.wandroid.UsageListActivity" >
 
     <!--
     This layout is a two-pane layout for the Draw
